# project2

./: ##layout.dxf  ##output.dxf  ##part2.dxf  #kon.dxf  #layout.dxf  #output.dxf  #part1.dxf  #part2.dxf  #part4.dxf  #part6.dxf  #part7.dxf  -o  .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Debug.txt  Debug_Spline.dxf  Line.csv  Line.dxf  User.lnk  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arc_test.dxf  auto_nest.py  bvh.h  circle_test.dxf  clipper3.vcxproj  clipper3.vcxproj.filters  cmake_install.cmake  config.json  config.yaml  config_util.py  cuda_kernels.vcxproj  cuda_kernels.vcxproj.filters  cxxopts.hpp  debug.txt  ellipse_test.dxf  extract_all_shapes.py  extract_polylines.py  (+52 more)
.github/workflows/: build.yml  ci.yml  main.yml
Debug/: cuda_kernels.lib  geometry.lib
Release/: clipper3.lib  cuda_kernels.lib  geometry.lib
clipper3.dir/Debug/: clipper3.lib.recipe
clipper3.dir/Debug/clipper3.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
clipper3.dir/Release/: clipper3.lib.recipe
clipper3.dir/Release/clipper3.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
clipper3/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
cuda/: overlap_cuda.cu  overlap_cuda.h
cuda_kernels.dir/Debug/: nfp_gpu.cu.cache  overlap_gpu.cu.cache
cuda_kernels.dir/Debug/cuda_kernels.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cuda_kernels.dir/Release/: nfp_gpu.cu-1506274777.deps  nfp_gpu.cu.cache  overlap_gpu.cu.cache
cuda_kernels.dir/Release/cuda_kernels.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
geometry.dir/Debug/geometry.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
geometry.dir/Release/geometry.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
nest.dir/Debug/: nest.exe.recipe
nest.dir/Debug/nest.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
nest.dir/Release/: nest.exe.recipe  nest.vcxproj.FileListAbsolute.txt
nest.dir/Release/nest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  nest.write.1u.tlog
nesting-master/: Nesting.sln  README.md
nesting-master/Nesting/: Nesting.vcxproj  Nesting.vcxproj.filters  OpenglCallbacks.cpp  OpenglCallbacks.h  Picture.cpp  Picture.h  Piece.cpp  Piece.h  PreProcessing.cpp  PreProcessing.h  Problem.cpp  Problem.h  algorithms.cpp  algorithms.h  global.cpp  global.h  imageProcessing.cpp  imageProcessing.h  loadFile.cpp  loadFile.h  main.cpp
test_benchmark.dir/Debug/: test_benchmark.exe.recipe
test_benchmark.dir/Debug/test_benchmark.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test_benchmark.dir/Release/: test_benchmark.exe.recipe
test_benchmark.dir/Release/test_benchmark.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test_minkowski.dir/Debug/: test_minkowski.exe.recipe
test_minkowski.dir/Debug/test_minkowski.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test_minkowski.dir/Release/: test_minkowski.exe.recipe
test_minkowski.dir/Release/test_minkowski.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test_overlap.dir/Debug/: test_overlap.exe.recipe
test_overlap.dir/Debug/test_overlap.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_overlap.lastbuildstate
test_overlap.dir/Release/: test_overlap.exe.recipe
test_overlap.dir/Release/test_overlap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: benchmark.cpp  test_benchmark.cpp  test_cli.py  test_minkowski_gpu.cpp  test_offsets_gpu.cpp  test_overlap.cpp  test_regression_gpu.cpp
uploads/: part.dxf
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
